[package]
name = "ethdigest-macros"
version = "0.2.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum digest literals and compile-time hashing"
documentation = "https://docs.rs/ethdigest-macros"
readme = "README.md"
homepage = "https://github.com/nlordell/ethdigest-rs"
repository = "https://github.com/nlordell/ethdigest-rs"
license = "MIT OR Apache-2.0"
keywords = ["digest", "ethereum", "hash", "keccak"]
categories = ["cryptography::cryptocurrencies"]

[lib]
proc-macro = true

[dependencies]
sha3 = { version = "0.10", default-features = false }
